WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
229430
Fix include guards in PlatformScreenMac.mm
https://bugs.webkit.org/show_bug.cgi?id=229430
Summary
Fix include guards in PlatformScreenMac.mm
Jer Noble
Reported
2021-08-23 15:49:49 PDT
Fix include guards in PlatformScreenMac.mm
Attachments
Patch
(1.73 KB, patch)
2021-08-23 15:53 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2021-08-23 15:53:01 PDT
Created
attachment 436243
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2021-08-30 15:50:25 PDT
<
rdar://problem/82551501
>
EWS
Comment 3
2021-08-30 16:07:12 PDT
Committed
r281783
(
241120@main
): <
https://commits.webkit.org/241120@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 436243
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug