Fix include guards in PlatformScreenMac.mm https://bugs.webkit.org/show_bug.cgi?id=229430

Reviewed by Alex Christensen.

The include guards should refer to the file they're including.

* platform/mac/PlatformScreenMac.mm:


Canonical link: https://commits.webkit.org/241120@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281783 268f45cc-cd09-0410-ab3c-d52691b4dbfc